# irnas-voltage-divider-driver

./: .gitignore  CHANGELOG.md  Kconfig  README.md  west.yml
drivers/: CMakeLists.txt  Kconfig
drivers/voltage_divider/: CMakeLists.txt  Kconfig  voltage_divider.c  voltage_divider.h  voltage_divider_shell.c
dts/bindings/: irnas,voltage-divider.yaml
samples/basic/: CMakeLists.txt  app.overlay  prj.conf
samples/basic/src/: main.c
tests/voltage_divider_test/: CMakeLists.txt  prj.conf
tests/voltage_divider_test/src/: main.c
